# PhotoEditor

./: README.md
projekt/: CMakeLists.txt  GetFilenameToSave.h  OpenFileDialog.h  main.cpp
